@@ -94,8 +94,8 @@ $enum2pack = {
   OpenCL::CL_DEVICE_VENDOR_ID => "L",
   OpenCL::CL_DEVICE_MAX_COMPUTE_UNITS => "L",
   OpenCL::CL_DEVICE_MAX_WORK_ITEM_DIMENSIONS => "L",
-  OpenCL::CL_DEVICE_MAX_WORK_GROUP_SIZE => "L",
-  OpenCL::CL_DEVICE_MAX_WORK_ITEM_SIZES => "L3",
+  OpenCL::CL_DEVICE_MAX_WORK_GROUP_SIZE => "Q",
+  OpenCL::CL_DEVICE_MAX_WORK_ITEM_SIZES => "Q3",
   OpenCL::CL_DEVICE_PREFERRED_VECTOR_WIDTH_CHAR => "L",
   OpenCL::CL_DEVICE_PREFERRED_VECTOR_WIDTH_SHORT => "L",
   OpenCL::CL_DEVICE_PREFERRED_VECTOR_WIDTH_INT => "L",
@@ -107,13 +107,13 @@ $enum2pack = {
   OpenCL::CL_DEVICE_MAX_READ_IMAGE_ARGS => "L",
   OpenCL::CL_DEVICE_MAX_WRITE_IMAGE_ARGS => "L",
   OpenCL::CL_DEVICE_MAX_MEM_ALLOC_SIZE => "L",
-  OpenCL::CL_DEVICE_IMAGE2D_MAX_WIDTH => "L",
-  OpenCL::CL_DEVICE_IMAGE2D_MAX_HEIGHT => "L",
-  OpenCL::CL_DEVICE_IMAGE3D_MAX_WIDTH => "L",
-  OpenCL::CL_DEVICE_IMAGE3D_MAX_HEIGHT => "L",
-  OpenCL::CL_DEVICE_IMAGE3D_MAX_DEPTH => "L",
+  OpenCL::CL_DEVICE_IMAGE2D_MAX_WIDTH => "Q",
+  OpenCL::CL_DEVICE_IMAGE2D_MAX_HEIGHT => "Q",
+  OpenCL::CL_DEVICE_IMAGE3D_MAX_WIDTH => "Q",
+  OpenCL::CL_DEVICE_IMAGE3D_MAX_HEIGHT => "Q",
+  OpenCL::CL_DEVICE_IMAGE3D_MAX_DEPTH => "Q",
   OpenCL::CL_DEVICE_IMAGE_SUPPORT => "cl_bool",
-  OpenCL::CL_DEVICE_MAX_PARAMETER_SIZE => "L",
+  OpenCL::CL_DEVICE_MAX_PARAMETER_SIZE => "Q",
   OpenCL::CL_DEVICE_MAX_SAMPLERS => "L",
   OpenCL::CL_DEVICE_MEM_BASE_ADDR_ALIGN => "L",
   OpenCL::CL_DEVICE_MIN_DATA_TYPE_ALIGN_SIZE => "L",
@@ -127,7 +127,7 @@ $enum2pack = {
   OpenCL::CL_DEVICE_LOCAL_MEM_TYPE => "L",
   OpenCL::CL_DEVICE_LOCAL_MEM_SIZE => "L",
   OpenCL::CL_DEVICE_ERROR_CORRECTION_SUPPORT => "cl_bool",
-  OpenCL::CL_DEVICE_PROFILING_TIMER_RESOLUTION => "L",
+  OpenCL::CL_DEVICE_PROFILING_TIMER_RESOLUTION => "Q",
   OpenCL::CL_DEVICE_ENDIAN_LITTLE => "cl_bool",
   OpenCL::CL_DEVICE_AVAILABLE => "cl_bool",
   OpenCL::CL_DEVICE_COMPILER_AVAILABLE => "cl_bool",
@@ -153,8 +153,8 @@ $enum2pack = {
   OpenCL::CL_DEVICE_OPENCL_C_VERSION => "Z*",
   OpenCL::CL_DEVICE_LINKER_AVAILABLE => "cl_bool",
   OpenCL::CL_DEVICE_BUILT_IN_KERNELS => "Z*",
-  OpenCL::CL_DEVICE_IMAGE_MAX_BUFFER_SIZE => "L",
-  OpenCL::CL_DEVICE_IMAGE_MAX_ARRAY_SIZE => "L",
+  OpenCL::CL_DEVICE_IMAGE_MAX_BUFFER_SIZE => "Q",
+  OpenCL::CL_DEVICE_IMAGE_MAX_ARRAY_SIZE => "Q",
   OpenCL::CL_DEVICE_PARENT_DEVICE => "Q",
   OpenCL::CL_DEVICE_PARTITION_MAX_SUB_DEVICES => "L",
   OpenCL::CL_DEVICE_PARTITION_PROPERTIES => "L",
@@ -162,7 +162,7 @@ $enum2pack = {
   OpenCL::CL_DEVICE_PARTITION_TYPE => "L",
   OpenCL::CL_DEVICE_REFERENCE_COUNT => "L",
   OpenCL::CL_DEVICE_PREFERRED_INTEROP_USER_SYNC => "L",
-  OpenCL::CL_DEVICE_PRINTF_BUFFER_SIZE => "L",
+  OpenCL::CL_DEVICE_PRINTF_BUFFER_SIZE => "Q",
   OpenCL::CL_DEVICE_IMAGE_PITCH_ALIGNMENT => "L",
   OpenCL::CL_DEVICE_IMAGE_BASE_ADDRESS_ALIGNMENT => "L"
 }
